--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,90 @@
+*{
+  display:block;
+  margin: 0;
+  padding: 0;
+  }
+
+  *,*::before,*::after {
+    box-sizing: border-box;
+}
+
+:root {
+    font-size: 16px;
+}
+
+
 body {
-    font-family: 'Franklin Gothic Medium', sans-serif;
-    margin: 20px;
+  max-width: 100vw;
+  font-family: 'Franklin Gothic Medium', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-h1 {
-    color: black;
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  position:fixed;
+  width:100%;
+  top:0;
+  z-index: 1000; /* Ensure header stays on top */
+}
+h1{
+  text-align: center;
+  margin:0;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-#artworks div {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
+.navbar__btn {
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
 }
+
+.navbar__btn:hover {
+  background-color: #555;
+}
+
+#search-bar {
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+    border-radius: 4px;
+  width: 80%;
+  
+}
+
+#content {
+  padding: 20px;
+  margin-top: 20%;
+}
+#wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 35px;
+}
+.artwork, .exhibition {
+  flex: 1 1 calc(33.333% - 20px);
+  box-shadow: 0 4px 8px rgba(14, 13, 13, 1);
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.artwork img, .exhibition img {
+  width: 100%;
+  max-width: 200px;
+  object-fit: cover;
+}
+
+
+
+
