--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,22 @@
-*{
-  display:block;
+* {
+  display: block;
   margin: 0;
   padding: 0;
-  }
+}
 
-  *,*::before,*::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 :root {
-    font-size: 16px;
+  font-size: 16px;
 }
-
 
 body {
   max-width: 100vw;
-  font-family: 'Franklin Gothic Medium', sans-serif;
+  font-family: "Franklin Gothic Medium", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -24,19 +25,20 @@ header {
   background-color: #333;
   color: #fff;
   padding: 10px;
-  position:fixed;
-  width:100%;
-  top:0;
+  position: fixed;
+  width: 100%;
+  top: 0;
   z-index: 1000; /* Ensure header stays on top */
 }
-h1{
+h1 {
   text-align: center;
-  margin:0;
+  margin: 0;
 }
 .navbar {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  gap: 8px;
 }
 
 .navbar__btn {
@@ -49,6 +51,9 @@ h1{
   border-radius: 10px;
 }
 
+.navbar__btn.active {
+  background-color: #917d77;
+}
 .navbar__btn:hover {
   background-color: #555;
 }
@@ -57,21 +62,31 @@ h1{
   padding: 5px;
   font-size: 16px;
   border: 1px solid #ccc;
-    border-radius: 4px;
-  width: 80%;
-  
+  border-radius: 4px;
+  width: 65%;
 }
 
 #content {
   padding: 20px;
-  margin-top: 20%;
+  margin-top: 10%;
 }
+
+#artworks-wrapper.active,
+#exhibitions-wrapper.active {
+  display: block; /* Show the active section */
+}
+
 #wrapper {
   display: flex;
   flex-wrap: wrap;
   gap: 35px;
 }
-.artwork, .exhibition {
+.artwork,
+.exhibition {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   flex: 1 1 calc(33.333% - 20px);
   box-shadow: 0 4px 8px rgba(14, 13, 13, 1);
   padding: 10px;
@@ -79,12 +94,24 @@ h1{
   border-radius: 8px;
 }
 
-.artwork img, .exhibition img {
+.artwork img {
   width: 100%;
   max-width: 200px;
   object-fit: cover;
+  margin-bottom: 10px;
 }
 
+.artworks-mentioned {
+  list-style-type: none;
+  padding: 0;
+  margin: 10px 0;
+}
 
-
-
+.artworks-mentioned li {
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  /border-radius: 5px;
+  padding: 8px;
+  /margin: 4px 0;
+  text-align: center;
+}
